modify the styles and some sections

--- a/abstract-guidelines.html
+++ b/abstract-guidelines.html
@@ -37,28 +37,18 @@
             <nav id="navmenu" class="navmenu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="registration-guidelines.html">Registration</a></li>
+                    <li><a href="abstract-guidelines.html">Abstract</a></li>
+                    <li><a href="index.html#scientific-program">Scientific Program</a></li>
 
                     <li class="dropdown">
-                        <a href="#"><span>Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                        <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
-
-                            <li><a href="abstract-guidelines.html">Abstract Submission Guidelines</a></li>
                             <li><a href="travel.html">Travel Information</a></li>
-
-                            <li class="dropdown">
-                                <a href="#"><span>Registration</span> <i
-                                        class="bi bi-chevron-down toggle-dropdown"></i></a>
-                                <ul>
-                                    <li><a href="registration-guidelines.html">Registration Guidelines</a></li>
-                                    <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
-                                </ul>
-                            </li>
+                            <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
 
                         </ul>
                     </li>
-
-                    <li><a href="index.html#culture-gallery">Gallery</a></li>
-                    <li><a href="index.html#sponsors">Sponsors</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -223,13 +213,7 @@
                     <hr class="my-4">
 
 
-                    <!-- CONTACT -->
-                    <h3 class="fw-bold mt-4">Need Help?</h3>
-                    <p>
-                        For inquiries regarding abstract submission:<br>
-                        <strong>Email:</strong> abstracts@apsc2026.lk<br>
-                        <strong>Website:</strong> www.apsc2026.lk
-                    </p>
+                
 
                 </div>
 
@@ -252,8 +236,7 @@
                         <div class="footer-contact pt-3">
                             <p>Colombo</p>
                             <p>Sri Lanka</p>
-                            <p class="mt-3"><strong>Phone:</strong> +94 11 123 4567</p>
-                            <p><strong>Email:</strong> info@apsc2026.lk</p>
+                            <p><strong>Email:</strong> apsc2026.secretariat@gmail.com</p>
                         </div>
                     </div>
 
@@ -271,8 +254,7 @@
                     <div class="col-lg-3 col-md-6 footer-contact">
                         <h4>Contact Us</h4>
                         <p><i class="bi bi-geo-alt me-2"></i>Colombo, Sri Lanka</p>
-                        <p><i class="bi bi-telephone me-2"></i>+94 11 123 4567</p>
-                        <p><i class="bi bi-envelope me-2"></i>info@apsc2026.lk</p>
+                        <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
                     </div>
 
                 </div>
