--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
+          <li><a href="./registration-guidelines.html" class="active">Registration<br></a></li>
+          <li><a href="./abstract-guidelines.html" class="active">Abstract<br></a></li>
+          <li><a href="#hero" class="active">Scientific Program<br></a></li>
           <li class="dropdown">
-            <a href="#"><span>Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="#"><span>General Information</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
 
-              <li><a href="abstract-guidelines.html">Abstract Submission Guidelines</a></li>
               <li><a href="travel.html">Travel Information</a></li>
+              <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
 
-              <li class="dropdown">
+              <!-- <li class="dropdown">
                 <a href="#"><span>Registration</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="registration-guidelines.html">Registration Guidelines</a></li>
                   <li><a href="privacy-policy.html">Privacy & Data Protection Policy</a></li>
                 </ul>
-              </li>
+              </li> -->
 
             </ul>
           </li>
-
-          <li><a href="#culture-gallery">Gallery</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -96,7 +96,6 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-          <li><a href="#sponsors">Sponsors</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -128,7 +127,7 @@
         </div>
       </div>
 
-      <div class="about-info mt-auto position-relative">
+      <div class=" mt-auto position-relative">
 
         <!-- <div class="container position-relative" data-aos="fade-up">
           <div class="row">
@@ -152,50 +151,6 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- Presidents Section -->
-    <section id="messages" class="messages section light-background">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>President's Messages</h2>
-        <p>Welcome messages from the Presidents</p>
-      </div>
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-4">
-
-          <!-- President Message -->
-          <div class="col-lg-6">
-            <div class="message-card d-flex flex-column align-items-center text-center p-4">
-              <img src="assets/img/president.jpg" alt="President" class="img-fluid rounded-circle mb-3 message-img">
-              <h4 class="fw-bold mb-1">Dr. Gamini Pathirana</h4>
-              <p class="position mb-3">President, National Stroke Association of Sri Lanka (NSASL) <br> Chair, Asia
-                Pacific Stroke Conference 2026</p>
-              <p class="message-text">
-                It is a privilege to invite you to the Asia Pacific Stroke Conference (APSC) 2026, which will be held
-                26–28 November 2026 in the vibrant city of Colombo, Sri Lanka...
-              </p>
-              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#presidentModal">Read More</a>
-            </div>
-          </div>
-
-          <!-- Vice President Message -->
-          <div class="col-lg-6">
-            <div class="message-card d-flex flex-column align-items-center text-center p-4">
-              <img src="assets/img/president2.jpg" alt="Vice President"
-                class="img-fluid rounded-circle mb-3 message-img">
-              <h4 class="fw-bold mb-1">Prof. Nijasri C. Suwanwela, M.D</h4>
-              <p class="position mb-3">President, Asia Pacific Stroke Organisation (APSO) <br> .</p>
-              <p class="message-text">
-                On behalf of the Asia Pacific Stroke Organisation (APSO), it is my great pleasure to invite you to the
-                Asia
-                Pacific Stroke Conference (APSC) 2026, to be held in Colombo, Sri Lanka...
-              </p>
-              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#vpModal">Read More</a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
 
     <!-- President Modal -->
     <div class="modal fade" id="presidentModal" tabindex="-1" aria-labelledby="presidentModalLabel" aria-hidden="true">
@@ -336,7 +291,7 @@
               </div>
               <h4>Date & Venue</h4>
               <p>26–28 November 2026<br>Cinnamon Grand, Colombo, Sri Lanka</p>
-              <a href="#venue" class="read-more">View Details <i class="bi bi-arrow-right"></i></a>
+              <a href="#venue" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -348,7 +303,7 @@
               </div>
               <h4>Registration Info</h4>
               <p>Early Bird, Regular, Late & Onsite registration categories available.</p>
-              <a href="#registration" class="read-more">Learn More <i class="bi bi-arrow-right"></i></a>
+              <a href="registration-guidelines.html" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -360,7 +315,7 @@
               </div>
               <h4>Abstract Submission</h4>
               <p>Submit your abstract before the deadline to share your research at APSC 2026.</p>
-              <a href="#abstract" class="read-more">Submit Abstract <i class="bi bi-arrow-right"></i></a>
+              <a href="abstract-guidelines.html" class="read-more">More<i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -371,8 +326,8 @@
                 <i class="bi bi-envelope"></i>
               </div>
               <h4>Contact</h4>
-              <p>Email: info@apsc2026.org<br>Phone: +94 11 234 5678</p>
-              <a href="#contact" class="read-more">Get in Touch <i class="bi bi-arrow-right"></i></a>
+              <p>Email: apsc2026.secretariat@gmail.com<br></p>
+              <a href="#contact" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -900,9 +855,9 @@
           <!-- Card 5 -->
           <div class="col-md-4 col-lg-2-4">
             <div class="heritage-card">
-              <img src="assets/img/skyline.jpg" alt="Colombo Skyline">
+              <img src="assets/img/bridge.jpg" alt="The Nine Arch Bridge">
               <div class="heritage-info">
-                <h5>Colombo Skyline</h5>
+                <h5>The Nine Arch Bridge</h5>
               </div>
             </div>
           </div>
@@ -935,7 +890,7 @@
                 <li><i class="bi bi-mic-fill me-2 text-accent"></i> Renowned keynote speakers</li>
                 <li><i class="bi bi-heart-pulse-fill me-2 text-accent"></i> Cutting-edge stroke trials</li>
               </ul>
-              <a href="#why-attend" class="read-more">Learn More <i class="bi bi-arrow-right"></i></a>
+              <a href="#why-attend" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -959,7 +914,7 @@
                 <img src="https://flagcdn.com/w40/ph.png" alt="Philippines" title="Philippines">
               </div>
 
-              <a href="#international" class="read-more">View Countries <i class="bi bi-arrow-right"></i></a>
+              <a href="#international" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -975,7 +930,7 @@
                 <li><strong>Day 2:</strong> Focused Symposia & Workshops</li>
                 <li><strong>Day 3:</strong> Case Discussions & Closing Remarks</li>
               </ul>
-              <a href="#program" class="read-more">View Full Program <i class="bi bi-arrow-right"></i></a>
+              <a href="#program" class="read-more">More <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -1059,13 +1014,13 @@
     <!-- /Gallery Section -->
 
     <!-- Sponsors Section -->
-    <section id="sponsors" class="sponsors section light-background">
+    <!-- <section id="sponsors" class="sponsors section light-background">
 
-      <!-- Section Title -->
+
       <div class="container section-title" data-aos="fade-up">
         <h2>Sponsors</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -1073,41 +1028,39 @@
 
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
-
+          </div>
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
-
+          </div>
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
-
+          </div>
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
-          </div><!-- End Client Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Sponsors Section -->
+    </section> -->
+    <!-- /Sponsors Section -->
 
 
     <!-- Buy Tickets Section -->
@@ -1187,6 +1140,51 @@
     </section> -->
     <!-- /Buy Tickets Section -->
 
+    <!-- Presidents Section -->
+    <section id="messages" class="messages section light-background">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>President's Messages</h2>
+        <p>Welcome messages from the Presidents</p>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+
+          <!-- President Message -->
+          <div class="col-lg-6">
+            <div class="message-card d-flex flex-column align-items-center text-center p-4">
+              <img src="assets/img/president.jpg" alt="President" class="img-fluid rounded-circle mb-3 message-img">
+              <h4 class="fw-bold mb-1">Dr. Gamini Pathirana</h4>
+              <p class="position mb-3">President, National Stroke Association of Sri Lanka (NSASL) <br> Chair, Asia
+                Pacific Stroke Conference 2026</p>
+              <p class="message-text">
+                It is a privilege to invite you to the Asia Pacific Stroke Conference (APSC) 2026, which will be held
+                26–28 November 2026 in the vibrant city of Colombo, Sri Lanka...
+              </p>
+              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#presidentModal">Read More</a>
+            </div>
+          </div>
+
+          <!-- Vice President Message -->
+          <div class="col-lg-6">
+            <div class="message-card d-flex flex-column align-items-center text-center p-4">
+              <img src="assets/img/president2.jpg" alt="Vice President"
+                class="img-fluid rounded-circle mb-3 message-img">
+              <h4 class="fw-bold mb-1">Prof. Nijasri C. Suwanwela, M.D</h4>
+              <p class="position mb-3">President, Asia Pacific Stroke Organisation (APSO) <br> .</p>
+              <p class="message-text">
+                On behalf of the Asia Pacific Stroke Organisation (APSO), it is my great pleasure to invite you to the
+                Asia
+                Pacific Stroke Conference (APSC) 2026, to be held in Colombo, Sri Lanka...
+              </p>
+              <a href="#" class="btn-read-more" data-bs-toggle="modal" data-bs-target="#vpModal">Read More</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
@@ -1209,21 +1207,22 @@
             </div>
           </div><!-- End Info Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <!-- <div class="col-lg-3 col-md-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
               data-aos-delay="300">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
               <p>+94 11 123 4567</p>
             </div>
-          </div><!-- End Info Item -->
+          </div> -->
+          <!-- End Info Item -->
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-6">
             <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up"
               data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email Us</h3>
-              <p>info@apsc2026.lk</p>
+              <p>apsc2026.secretariat@gmail.com</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -1291,8 +1290,8 @@
             <div class="footer-contact pt-3">
               <p>Colombo</p>
               <p>Sri Lanka</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <!-- <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p> -->
+              <p><strong>Email:</strong> <span>apsc2026.secretariat@gmail.com</span></p>
             </div>
           </div>
 
@@ -1312,8 +1311,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p><i class="bi bi-geo-alt me-2"></i>Colombo, Sri Lanka</p>
-            <p><i class="bi bi-telephone me-2"></i>+94 11 123 4567</p>
-            <p><i class="bi bi-envelope me-2"></i>info@apsc2026.lk</p>
+            <p><i class="bi bi-envelope me-2"></i>apsc2026.secretariat@gmail.com</p>
           </div>
 
 
